fixed concurrently running program

--- a/home.html
+++ b/home.html
@@ -7,13 +7,14 @@
     <body>
     <div class="bigdiv">
         <div class="flexbox">
+            <div class="timepops">
             <div class="timeperiod">
                 <p>25:00</p>
             </div>
             <div>
                 <button>Start</button>
             </div>
-
+            </div>
           <div class="custom">
             <div><a>Pormodoro</a></div>
             <div><a>Kort-paus</a></div>
