fixed concurrently running program

--- a/home.html
+++ b/home.html
@@ -8,11 +8,10 @@
     <div class="bigdiv">
         <div class="flexbox">
             <div class="timepops">
-            <div class="timeperiod">
-                <p>25:00</p>
-            </div>
+            <div class="timeperiod"><span class="time" id="time" >1:00</span></div>
             <div>
-                <button>Start</button>
+                <button id="start" >Start</button>
+                <button id="reset" >Reset</button>
             </div>
             </div>
           <div class="custom">
@@ -20,10 +19,28 @@
             <div><a>Kort-paus</a></div>
             <div><a>Custom</a></div>
           </div>
-
         </div>
 
+        <div class="arbetsplats" >
+
+            <div class="arbete" >Shuffla din arbetsplats
+            </div>
+
+
+        <div class="song" >
+            <a class="button-wrap"><button><img src="https://img.icons8.com/emoji/96/000000/cloud-with-rain-emoji.png" height="35px" ></button></a>
+            <a class="button-wrap"><button><img src="https://img.icons8.com/emoji/48/000000/national-park-emoji.png"  height="35px" ></button></a>
+            <a class="button-wrap"><button><img src="https://img.icons8.com/emoji/48/000000/crystal-ball-.png" height="35px" ></button></a>
+        </div>
+            <div class="song" >
+            <a class="button-wrap"><button><img src="https://img.icons8.com/emoji/48/000000/night-with-stars.png" height="35px" ></button></a>
+            <a class="button-wrap"><button><img src="https://img.icons8.com/emoji/48/000000/headphone-emoji.png" height="35px" ></button></a>
+            <a class="button-wrap"><button><img src="https://img.icons8.com/emoji/48/000000/video-game-emoji.png" height="35px" ></button></a>
+        </div>
+
+
+        </div>
     </div>
     </body>
-    <script src="hello.js"></script>
+    <script src="script.js"></script>
 </htm>
